--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,8 @@ authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
-
+python="^3.7.9"
+pygame = "^2.5.2"
 
 [build-system]
 requires = ["poetry-core"]
